2005-12-11 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to 2.6.15-rc5-mm2
	* info/patches/mm_patches/2.6.15-rc5-mm2: added

2005-12-05 David Brown <dmlb2000@gmail.com>
	* info/patches-sigs/sws2_patches/software-suspend-2.2-rc14-for-2.6.14.patch.bz2.sig: added
	* info/patches/sws2_patches/software-suspend-2.2-rc14-for-2.6.14.patch: added

2005-12-04 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to 2.6.15-rc5-mm1
	* info/patches/mm_patches/2.6.15-rc5-mm1: added

2005-12-04 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to patch-2.6.15-rc5
	* info/patches/PRE_2_6/patch-2.6.15-rc5: added

2005-11-30 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to patch-2.6.15-rc4
	* info/patches/PRE_2_6/patch-2.6.15-rc4: added

2005-11-30 David Brown <dmlb2000@gmail.com>
	* info/patches/tarpit_patches/tarpit-for-2.6.14-1.patch: added
	* info/patches-sigs/tarpit_patches/tarpit-for-2.6.14-1.patch.bz2: added

2005-11-30 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to 2.6.15-rc3-mm1
	* info/patches/mm_patches/2.6.15-rc3-mm1: added

2005-11-28 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to patch-2.6.15-rc3
	* info/patches/PRE_2_6/patch-2.6.15-rc3: added

2005-11-28 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to grsecurity-2.1.7-2.4.32-200511131857.patch
	* info/patches/grsecurity_2_4/grsecurity-2.1.7-2.4.32-200511131857.patch: added

2005-11-28 David Brown <dmlb2000@gmail.com>
	* info/kernels/2.6.32: added
	* latest.defaults: updated 2.4 kernel

2005-11-28 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to grsecurity-2.1.7-2.6.14.3-200511261227.patch
	* info/patches/grsecurity_2_6/grsecurity-2.1.7-2.6.14.3-200511261227.patch: added

2005-11-26 David Brown <dmlb2000@gmail.com>
	* PRE_BUILD: make sure the source directory doesn't have group and other
	  write permissions (chmod og-w -R $LINUX_SOURCE_DIRECTORY)
