@@ -1,0 +1,5 @@
+appliedkernels="2.6.14"
+depends="patch-2.6.15-rc5"
+source="software-suspend-2.2-rc14-for-${depends/patch-/}.patch.bz2"
+source_url="http://download.sourcemage.org/distro/kernel/${source}"
+source_gpg="gurus.gpg:info/patches-sigs/sws2_patches/${source}.sig"
