@@ -1,4 +1,8 @@
 2005-12-11 David Brown <dmlb2000@gmail.com>
+	* info/patches-sigs/sws2_patches/software-suspend-2.2-rc14-for-2.6.15-rc5.patch.bz2.sig: added
+	* info/patches/sws2_patches/software-suspend-2.2-rc14-for-2.6.15-rc5.patch: added
+
+2005-12-11 David Brown <dmlb2000@gmail.com>
 	* latest.defaults: updated latest to 2.6.15-rc5-mm2
 	* info/patches/mm_patches/2.6.15-rc5-mm2: added
 
